--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ coilCompose = "2.6.0"
 coilVideo = "2.6.0"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.7"
+firebaseAppcheckDebug = "18.0.0"
+firebaseAppcheckPlayintegrity = "18.0.0"
 firebaseBom = "33.15.0"
 foundationPager = "1.7.0-beta02"
 generativeai = "0.9.0"
@@ -24,6 +26,9 @@ media3Exoplayer = "1.7.1"
 media3Ui = "1.7.1"
 navigationCompose = "2.9.0"
 playServicesAuth = "21.3.0"
+roomCompiler = "2.7.1"
+roomKtx = "2.7.1"
+roomRuntime = "2.7.1"
 tasksVision = "0.10.21"
 tensorflowLiteVersion = "2.17.0"
 
@@ -43,8 +48,13 @@ androidx-material-icons-extended = { module = "androidx.compose.material:materia
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Ui" }
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil-video = { module = "io.coil-kt:coil-video", version.ref = "coilVideo" }
+firebase-appcheck-debug = { module = "com.google.firebase:firebase-appcheck-debug", version.ref = "firebaseAppcheckDebug" }
+firebase-appcheck-playintegrity = { module = "com.google.firebase:firebase-appcheck-playintegrity", version.ref = "firebaseAppcheckPlayintegrity" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
